--- a/examples/generateMSM.ipynb
+++ b/examples/generateMSM.ipynb
@@ -23,7 +23,7 @@
    "outputs": [],
    "source": [
     "# Load parameters from parameters file\n",
-    "parentDirectory = '../data/dimer/60strength_improved/'\n",
+    "parentDirectory = '../data/dimer/60strength/'\n",
     "parameterDictionary = analysisTools.readParameters(parentDirectory + \"parameters\")\n",
     "# Parameters for loading files (from original simulation)\n",
     "nfiles = parameterDictionary['numFiles']\n",
@@ -44,7 +44,7 @@
     "fnamebase = parentDirectory + 'simDimer_'\n",
     "# Parameters for MSM generation \n",
     "numBoundStates = 8\n",
-    "lagtime = 400\n",
+    "lagtime = 150\n",
     "reversible = True\n",
     "stitching = True\n",
     "fullDictionary = False # Only rates to and from bound states."
@@ -102,10 +102,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Pickle MSM transition matrix and active set as a dictionary   \n",
+    "MSM = {'transition_matrix' : mainmsm.transition_matrix, 'active_set': mainmsm.active_set}\n",
+    "pickle_out = open(\"../data/pickled_data/MSM_dimer_t\" + \"{:.2E}\".format(totalTimeSteps ) + \"_s\" + \"{:d}\".format(stride) + \"_lagt\" + \"{:d}\".format(lagtime) + \".pickle\",\"wb\")\n",
+    "pickle.dump(MSM, pickle_out)\n",
+    "pickle_out.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Implied timescales and CK test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# CK-test\n",
-    "nstates = 8\n",
-    "cktest = mainmsm.cktest(nstates, mlags=6)\n",
-    "mplt.plot_cktest(cktest);"
+    "nsets = 12\n",
+    "#sets = [1, 3, 5, 7, 9, 11, 13, 15]\n",
+    "#memberships = np.vstack((range(nsets), sets)).transpose()\n",
+    "cktest = mainmsm.cktest(nsets, mlags=6)\n",
+    "mplt.plot_cktest(cktest);\n",
+    "#plt.savefig('cktest12.pdf')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mplt.plot_cktest(cktest);\n",
+    "plt.savefig('cktest12.pdf')"
    ]
   },
   {
@@ -115,9 +148,10 @@
    "outputs": [],
    "source": [
     "# Calculate implied time scales\n",
-    "maxlagtime = 500\n",
-    "nits = 20\n",
-    "its = pyemma.msm.its(finalTrajs, maxlagtime, reversible=reversible)"
+    "maxlagtime = 300\n",
+    "its = pyemma.msm.its(finalTrajs, maxlagtime, reversible=reversible)\n",
+    "# with error bars\n",
+    "# its = pyemma.msm.its(finalTrajs, maxlagtime, reversible=reversible, errors='bayes')"
    ]
   },
   {
@@ -127,9 +161,10 @@
    "outputs": [],
    "source": [
     "# Plot implied timescales in ylog\n",
-    "mplt.plot_implied_timescales(its, nits = nits, ylog=True, units='steps', linewidth=2, dt=1)\n",
-    "plt.ylabel(r\"log(timescale/steps)\", fontsize = 24)\n",
-    "plt.xlabel(r\"lag time/steps\", fontsize = 24)\n",
+    "nits = 20\n",
+    "mplt.plot_implied_timescales(its, nits = nits, ylog=True, units='steps', linewidth=1, dt=1)\n",
+    "plt.ylabel(r\"log(timescale/steps)\", fontsize = 18)\n",
+    "plt.xlabel(r\"lag time/steps\", fontsize = 18)\n",
     "plt.ylim([10.0,8000])"
    ]
   },
@@ -151,10 +186,55 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# PLOT OF ITS FOR PAPER #\n",
+    "nits = 20\n",
+    "fig, ax = plt.subplots(figsize=(10, 7))\n",
+    "mplt.plot_implied_timescales(its, ax = ax, nits = nits, ylog=True, units='steps', linewidth=2, dt=1, \n",
+    "                             show_mean=False, markersize=0, confidence=0.95)\n",
+    "plt.ylabel(r\"log(timescale/steps)\", fontsize = 24)\n",
+    "plt.xlabel(r\"lag time/steps\", fontsize = 24)\n",
+    "plt.xticks(fontsize = 28)\n",
+    "plt.yticks(fontsize = 28)\n",
+    "plt.ylim([10.0,6000])\n",
+    "#plt.savefig('its_dimer_strength60_final.pdf')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# PLOT OF ITS NOLOG FOR PAPER (maybe)#\n",
+    "nits = 20\n",
+    "fig, ax = plt.subplots(figsize=(12, 7))\n",
+    "mplt.plot_implied_timescales(its, ax = ax, nits = nits, ylog=False, units='steps', linewidth=2, dt=1, \n",
+    "                             show_mean=False, markersize=0, confidence=0.95)\n",
+    "plt.ylabel(r\"log(timescale/steps)\", fontsize = 24)\n",
+    "plt.xlabel(r\"lag time/steps\", fontsize = 24)\n",
+    "plt.xticks(fontsize = 28)\n",
+    "plt.yticks(fontsize = 28)\n",
+    "plt.ylim([10.0,4500])\n",
+    "#plt.savefig('its_nolog_dimer_strength60_final.pdf')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "eig0 = mainmsm.eigenvectors_right()[0]\n",
     "print(np.where(eig0>0.1))\n",
     "plt.plot(eig0)\n",
     "plt.xlim([0,100])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Old rate dictionary approach (deprecated)"
    ]
   },
   {
@@ -178,28 +258,6 @@
     "pickle_out = open(\"../data/pickled_data/ratedictionary_dimer_t\" + \"{:.2E}\".format(totalTimeSteps ) + \"_s\" + \"{:d}\".format(stride) + \"_lagt\" + \"{:d}\".format(lagtime) + \".pickle\",\"wb\")\n",
     "pickle.dump(rateDictionary, pickle_out)\n",
     "pickle_out.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Alternatively pickle MSM transition matrix and active set as a dictionary   \n",
-    "MSM = {'transition_matrix' : mainmsm.transition_matrix, 'active_set': mainmsm.active_set}\n",
-    "pickle_out = open(\"../data/pickled_data/MSM_dimer_t\" + \"{:.2E}\".format(totalTimeSteps ) + \"_s\" + \"{:d}\".format(stride) + \"_lagt\" + \"{:d}\".format(lagtime) + \".pickle\",\"wb\")\n",
-    "pickle.dump(MSM, pickle_out)\n",
-    "pickle_out.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "MSM[1]"
    ]
   },
   {
