Generalized bootstraping function

--- a/examples/benchmark/plotPatchyDimerFPTs.ipynb
+++ b/examples/benchmark/plotPatchyDimerFPTs.ipynb
@@ -22,7 +22,7 @@
    "source": [
     "# Main parameters\n",
     "numparticles = 2\n",
-    "boxsize = 6 #5 \n",
+    "boxsize = 8 #10 #8 #6 #5 \n",
     "D = 1.0\n",
     "Drot = 1.0\n",
     "numTrajectories = 1000"
@@ -46,7 +46,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Get bound2unbound FPT data of bechmark and MSMRD from files"
+    "## Get unbound2bound FPT data of bechmark and MSMRD from files"
    ]
   },
   {
@@ -108,15 +108,18 @@
    "outputs": [],
    "source": [
     "# Compuate mean and standard deviation of bootstrapped samples of benchmark\n",
+    "calculateRates = True\n",
     "numBootsrapSamples = 2000\n",
-    "mfptA, fptAstd = analysisTools.bootstrappingMFPTs(fptsA, numBootsrapSamples)\n",
-    "mfptB, fptBstd = analysisTools.bootstrappingMFPTs(fptsB, numBootsrapSamples)\n",
+    "mfptA, fptAstd = analysisTools.bootstrapping(fptsA, numBootsrapSamples)\n",
+    "mfptB, fptBstd = analysisTools.bootstrapping(fptsB, numBootsrapSamples)\n",
+    "koffA = 1.0/np.array(fptsA)\n",
+    "koffB = 1.0/np.array(fptsB)\n",
     "print(\"Raw MFPTs (A and B): \", np.array(fptsA).mean(), np.array(fptsB).mean() )\n",
     "print(\"Bootstrapping mean and std (A): \", mfptA, fptAstd)\n",
     "print(\"Bootstrapping mean and std (B): \", mfptB, fptBstd)\n",
     "# Compuate mean and standard deviation of bootstrapped samples of MSMRD simulation\n",
-    "MSMRDmfptA, MSMRDfptAstd = analysisTools.bootstrappingMFPTs(MSMRDfptsA, numBootsrapSamples)\n",
-    "MSMRDmfptB, MSMRDfptBstd = analysisTools.bootstrappingMFPTs(MSMRDfptsB, numBootsrapSamples)\n",
+    "MSMRDmfptA, MSMRDfptAstd = analysisTools.bootstrapping(MSMRDfptsA, numBootsrapSamples)\n",
+    "MSMRDmfptB, MSMRDfptBstd = analysisTools.bootstrapping(MSMRDfptsB, numBootsrapSamples)\n",
     "print(\"Raw MSMRD MFPTs (A and B): \",np.array(MSMRDfptsA).mean(), np.array(MSMRDfptsB).mean())\n",
     "print(\"MSMRD bootstrapping mean and std (A): \", MSMRDmfptA, MSMRDfptAstd)\n",
     "print(\"MSMRD bootstrapping mean and std (B): \", MSMRDmfptB, MSMRDfptBstd)\n",
@@ -125,7 +128,21 @@
     "print(\"FPTs B\", len(fptsB), \"FPTs MSMRD-B\", len(MSMRDfptsB))\n",
     "ratioFPT = float(len(fptsA))/float(len(fptsB))\n",
     "ratioMSMRDFPT = float(len(MSMRDfptsA))/float(len(MSMRDfptsB))\n",
-    "print(\"Ratios:\", ratioFPT, ratioMSMRDFPT )"
+    "print(\"Ratios:\", ratioFPT, ratioMSMRDFPT )\n",
+    "if calculateRates:\n",
+    "    konA = 1.0/np.array(fptsA)\n",
+    "    konB = 1.0/np.array(fptsB)\n",
+    "    MSMRDkonA = 1.0/np.array(MSMRDfptsA)\n",
+    "    MSMRDkonB = 1.0/np.array(MSMRDfptsB)\n",
+    "    mkonA, konAstd = analysisTools.bootstrapping(konA, numBootsrapSamples)\n",
+    "    mkonB, konBstd = analysisTools.bootstrapping(konB, numBootsrapSamples)\n",
+    "    MSMRDmkonA, MSMRDkonAstd = analysisTools.bootstrapping(MSMRDkonA, numBootsrapSamples)\n",
+    "    MSMRDmkonB, MSMRDkonBstd = analysisTools.bootstrapping(MSMRDkonB, numBootsrapSamples)\n",
+    "    print(\"On rates:\")\n",
+    "    print(\"Bootstrapping mean and std (A):\", mkonA, konAstd)\n",
+    "    print(\"Bootstrapping mean and std (B):\", mkonB, konBstd)\n",
+    "    print(\"Bootstrapping MSMRD mean and std (A):\", MSMRDmkonA, MSMRDkonAstd)\n",
+    "    print(\"Bootstrapping MSMRD mean and std (B):\", MSMRDmkonB, MSMRDkonBstd)"
    ]
   },
   {
@@ -220,7 +237,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Get unbound2bound FPT data of bechmark and MSMRD from files"
+    "## Get bound2unbound FPT data of bechmark and MSMRD from files"
    ]
   },
   {
@@ -291,13 +308,13 @@
    "source": [
     "# Compuate mean and standard deviation of bootstrapped samples of benchmark\n",
     "numBootsrapSamples = 200\n",
-    "mfptA2unbound, fptA2unboundstd = analysisTools.bootstrappingMFPTs(fptsA2unbound, numBootsrapSamples)\n",
-    "mfptB2unbound, fptB2unboundstd = analysisTools.bootstrappingMFPTs(fptsB2unbound, numBootsrapSamples)\n",
+    "mfptA2unbound, fptA2unboundstd = analysisTools.bootstrapping(fptsA2unbound, numBootsrapSamples)\n",
+    "mfptB2unbound, fptB2unboundstd = analysisTools.bootstrapping(fptsB2unbound, numBootsrapSamples)\n",
     "print(\"Raw MFPTs (A and B): \", np.array(fptsA2unbound).mean(), np.array(fptsB2unbound).mean() )\n",
     "print(\"Bootstrapping mean and std (A): \", mfptA2unbound, fptA2unboundstd)\n",
     "print(\"Bootstrapping mean and std (B): \", mfptB2unbound, fptB2unboundstd)\n",
-    "MSMRDmfptA2unbound, MSMRDfptA2unboundstd = analysisTools.bootstrappingMFPTs(MSMRDfptsA2unbound, numBootsrapSamples)\n",
-    "MSMRDmfptB2unbound, MSMRDfptB2unboundstd = analysisTools.bootstrappingMFPTs(MSMRDfptsB2unbound, numBootsrapSamples)\n",
+    "MSMRDmfptA2unbound, MSMRDfptA2unboundstd = analysisTools.bootstrapping(MSMRDfptsA2unbound, numBootsrapSamples)\n",
+    "MSMRDmfptB2unbound, MSMRDfptB2unboundstd = analysisTools.bootstrapping(MSMRDfptsB2unbound, numBootsrapSamples)\n",
     "print(\"Raw MSMRD MFPTs (A and B): \",np.array(MSMRDfptsA2unbound).mean(), np.array(MSMRDfptsB2unbound).mean())\n",
     "print(\"MSMRD bootstrapping mean and std (A): \", MSMRDmfptA2unbound, MSMRDfptA2unboundstd)\n",
     "print(\"MSMRD bootstrapping mean and std (B): \", MSMRDmfptB2unbound, MSMRDfptB2unboundstd)"
@@ -470,50 +487,55 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lagtime = 150\n",
-    "numTrajs = 10000\n",
-    "filenameA = '../../data/dimer/first_passage_times/MSMRDpatchyDimerFPTs_A2B_trajs' + \\\n",
-    "str(numTrajs) + '_lagt' + str(lagtime) +  '_boxsize' + str(boxsize) + '.xyz'\n",
-    "MSMRDfptsA2B = []\n",
-    "with open(filenameA) as file:\n",
-    "    for line in file:\n",
-    "        state, time = line.split(\" \")\n",
-    "        time = float(time)\n",
-    "        MSMRDfptsA2B.append(time)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Plotting histogram for A to unbound FPTs\n",
+    "# PLOT FOR PAPER #\n",
+    "# Configure figure\n",
+    "fig, (ax1, ax2) = plt.subplots(nrows=2, sharex=True, figsize=(6,5))\n",
+    "fig.subplots_adjust(hspace=0)\n",
+    "fsize = 16\n",
+    "plt.rcParams['xtick.labelsize']=fsize\n",
+    "plt.rcParams['ytick.labelsize']=fsize\n",
+    "hbins = np.arange(0, 500, 15)\n",
+    "\n",
+    "# Set outer common axes titles\n",
+    "ax0 = fig.add_subplot(111, frameon=False)\n",
+    "ax0.set_xlabel(\"time\", fontsize=fsize + 2)\n",
+    "ax0.set_ylabel(\"FPTs distribution\", labelpad=17, fontsize=fsize + 2)\n",
+    "ax0.set_xticks([0])\n",
+    "ax0.set_yticks([0])\n",
+    "\n",
     "# Normalizing weights\n",
-    "#weightsA2B = np.ones_like(fptsA2B)/float(len(fptsA2B))\n",
+    "weightsA2B = np.ones_like(fptsA2B)/float(len(fptsA2B))\n",
     "weightsA2BMSMRD = np.ones_like(MSMRDfptsA2B)/float(len(MSMRDfptsA2B))\n",
-    "# Plot histograms\n",
-    "hbins = np.arange(0, 6, 0.2)\n",
-    "#plt.hist(fptsA2B, bins = hbins, alpha=a1, color=c1, weights = weightsA2B);\n",
-    "#plt.hist(fptsA2B, bins = hbins, alpha=a2, edgecolor=c1, lw=2, histtype='step',\n",
-    "#         facecolor='None', weights = weightsA2, label ='A');\n",
-    "plt.hist(MSMRDfptsA2B, bins = hbins, alpha=a1, color=c2, weights = weightsA2BMSMRD);\n",
-    "plt.hist(MSMRDfptsA2B, bins = hbins, alpha=a2, edgecolor=c2, lw=2, histtype='step',\n",
-    "         facecolor='None', weights = weightsA2BMSMRD, label ='MSMRD-A');\n",
-    "plt.xticks(fontsize=16)\n",
-    "#plt.yticks(np.arange(0, 0.16, step=0.04), fontsize=16)\n",
-    "plt.legend(fontsize=16)\n",
-    "plt.xlabel('time', fontsize=18)\n",
-    "plt.ylabel('FPTs distribution', fontsize=18)\n",
-    "#plt.xlim([0,6])"
+    "# Normalizing weights\n",
+    "weightsB2A = np.ones_like(fptsB2A)/float(len(fptsB2A))\n",
+    "weightsB2AMSMRD = np.ones_like(MSMRDfptsB2A)/float(len(MSMRDfptsB2A))\n",
+    "\n",
+    "# Plot A to B histogram\n",
+    "ax1.hist(fptsA2B, bins = hbins, alpha=a1, color=c1, weights = weightsA2B);\n",
+    "ax1.hist(fptsA2B, bins = hbins, alpha=a2, edgecolor=c1, lw=2, histtype='step',\n",
+    "         facecolor='None', weights = weightsA2B, label = 'Benchmark');\n",
+    "ax1.hist(MSMRDfptsA2B, bins = hbins, alpha=a1, color=c2, weights = weightsA2BMSMRD);\n",
+    "ax1.hist(MSMRDfptsA2B, bins = hbins, alpha=a2, edgecolor=c2, lw=2, histtype='step',\n",
+    "         facecolor='None', weights = weightsA2BMSMRD, label ='MSM/RD');\n",
+    "ax1.legend(fontsize=fsize, title=r'A $\\rightarrow$ B', title_fontsize = fsize, fancybox=True)\n",
+    "ax1.set_xlim([0,500])\n",
+    "ax1.set_ylim([0,0.2])\n",
+    "ax1.set_yticks(np.arange(0, 0.2, step=0.1));\n",
+    "\n",
+    "# Plot B to A histogram\n",
+    "ax2.hist(fptsB2A, bins = hbins, alpha=a1, color=c1, weights = weightsB2A);\n",
+    "ax2.hist(fptsB2A, bins = hbins, alpha=a2, edgecolor=c1, lw=2, histtype='step',\n",
+    "         facecolor='None', weights = weightsB2A, label = 'Benchmark');\n",
+    "ax2.hist(MSMRDfptsB2A, bins = hbins, alpha=a1, color=c2, weights = weightsB2AMSMRD);\n",
+    "ax2.hist(MSMRDfptsB2A, bins = hbins, alpha=a2, edgecolor=c2, lw=2, histtype='step',\n",
+    "         facecolor='None', weights = weightsB2AMSMRD, label ='MSM/RD');\n",
+    "ax2.legend(fontsize=fsize, title=r'B $\\rightarrow$ A', title_fontsize = fsize, fancybox=True)\n",
+    "ax2.set_xlim([0,500])\n",
+    "ax2.set_ylim([0,0.2])\n",
+    "ax2.set_yticks(np.arange(0, 0.2, step=0.1));\n",
+    "\n",
+    "#plt.savefig('bound2bound_FPTs.pdf')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
