Added paper rates plot in NB

--- a/examples/benchmark/plotPatchyDimerFPTs.ipynb
+++ b/examples/benchmark/plotPatchyDimerFPTs.ipynb
@@ -22,7 +22,7 @@
    "source": [
     "# Main parameters\n",
     "numparticles = 2\n",
-    "boxsize = 8 #10 #8 #6 #5 \n",
+    "boxsize = 6 #10 #8 #6 #5 \n",
     "D = 1.0\n",
     "Drot = 1.0\n",
     "numTrajectories = 1000"
@@ -535,6 +535,98 @@
     "ax2.set_yticks(np.arange(0, 0.2, step=0.1));\n",
     "\n",
     "#plt.savefig('bound2bound_FPTs.pdf')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Plot $K_{on}$ vs concentration plot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load all data\n",
+    "boxsizes = [6, 7, 8, 9, 10]\n",
+    "numBoxes = len(boxsizes)\n",
+    "kon = [[] for i in range(numBoxes)]\n",
+    "konMSMRD = [[] for i in range(numBoxes)]\n",
+    "for i, boxsize in enumerate(boxsizes):\n",
+    "    filename1 = '../../data/dimer/first_passage_times/patchyDimerFPTs_2bound_trajs' + \\\n",
+    "        str(numTrajs) + '_boxsize' + str(boxsize) + '.xyz'\n",
+    "    filename2 = '../../data/dimer/first_passage_times/MSMRDpatchyDimerFPTs_2bound_trajs' + \\\n",
+    "        str(numTrajs) + '_lagt' + str(lagtime) +  '_boxsize' + str(boxsize) + '.xyz'\n",
+    "    with open(filename1) as file:\n",
+    "        for line in file:\n",
+    "            state, time = line.split(\" \")\n",
+    "            kon[i].append(1.0/float(time))\n",
+    "    with open(filename2) as file:\n",
+    "        for line in file:\n",
+    "            state, time = line.split(\" \")\n",
+    "            konMSMRD[i].append(1.0/float(time))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate meand and bootstrapping error\n",
+    "numBootsrapSamples = 2000\n",
+    "meanKon = [0.0]*numBoxes\n",
+    "meanKonMSMRD = [0.0]*numBoxes\n",
+    "stdDevKon = [0.0]*numBoxes\n",
+    "stdDevKonMSMRD = [0.0]*numBoxes\n",
+    "for i, boxsize in enumerate(boxsizes):\n",
+    "    meanKon[i], stdDevKon[i] = analysisTools.bootstrapping(kon[i], numBootsrapSamples)\n",
+    "    meanKonMSMRD[i], stdDevKonMSMRD[i] = analysisTools.bootstrapping(konMSMRD[i], numBootsrapSamples)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot on rates vs concentration:\n",
+    "fig = plt.figure()\n",
+    "plt.rcParams['xtick.labelsize']=fsize\n",
+    "plt.rcParams['ytick.labelsize']=fsize\n",
+    "ax = fig.add_subplot(111)\n",
+    "linewidth = 0\n",
+    "fsize = 16\n",
+    "ax.errorbar(1.0/np.array(boxsizes), meanKon, yerr=stdDevKon, marker='o', markersize=7, elinewidth=2, \n",
+    "            linewidth=linewidth , capsize=5, label='Benchmark')\n",
+    "ax.errorbar(1.0/np.array(boxsizes), meanKonMSMRD, yerr=stdDevKonMSMRD, marker='o', markersize=7, \n",
+    "            elinewidth=2, linewidth=linewidth, capsize=5, label='MSM/RD')\n",
+    "#ax.set_yscale('log')\n",
+    "ax.set_xlabel(r'Concentration', fontsize = fsize+2)\n",
+    "ax.set_ylabel(r'$k_\\mathrm{on}$', fontsize = fsize+8)\n",
+    "ax.set_ylim([0,0.12])\n",
+    "ax.legend(fontsize=fsize, title_fontsize = fsize, fancybox=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.array(meanKonMSMRD) - np.array(meanKon)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "1.0/np.array(boxsizes)"
    ]
   }
  ],
