Added patchyDimer2 traj for pentamer test
...and minor updates

--- a/examples/benchmark/plotPatchyDimerFPTs.ipynb
+++ b/examples/benchmark/plotPatchyDimerFPTs.ipynb
@@ -551,14 +551,15 @@
    "outputs": [],
    "source": [
     "# Load all data\n",
-    "boxsizes = [6, 7, 8, 9, 10]\n",
+    "numTrajs = 5000\n",
+    "boxsizes = [6, 7, 8, 9, 10, 11, 12]\n",
     "numBoxes = len(boxsizes)\n",
     "kon = [[] for i in range(numBoxes)]\n",
     "konMSMRD = [[] for i in range(numBoxes)]\n",
     "for i, boxsize in enumerate(boxsizes):\n",
-    "    filename1 = '../../data/dimer/first_passage_times/patchyDimerFPTs_2bound_trajs' + \\\n",
+    "    filename1 = '../../data/dimer/first_passage_times/paper_data/on_rate/patchyDimerFPTs_2bound_trajs' + \\\n",
     "        str(numTrajs) + '_boxsize' + str(boxsize) + '.xyz'\n",
-    "    filename2 = '../../data/dimer/first_passage_times/MSMRDpatchyDimerFPTs_2bound_trajs' + \\\n",
+    "    filename2 = '../../data/dimer/first_passage_times/paper_data/on_rate/MSMRDpatchyDimerFPTs_2bound_trajs' + \\\n",
     "        str(numTrajs) + '_lagt' + str(lagtime) +  '_boxsize' + str(boxsize) + '.xyz'\n",
     "    with open(filename1) as file:\n",
     "        for line in file:\n",
@@ -577,7 +578,7 @@
    "outputs": [],
    "source": [
     "# Calculate meand and bootstrapping error\n",
-    "numBootsrapSamples = 2000\n",
+    "numBootsrapSamples = 1000\n",
     "meanKon = [0.0]*numBoxes\n",
     "meanKonMSMRD = [0.0]*numBoxes\n",
     "stdDevKon = [0.0]*numBoxes\n",
@@ -598,16 +599,17 @@
     "plt.rcParams['xtick.labelsize']=fsize\n",
     "plt.rcParams['ytick.labelsize']=fsize\n",
     "ax = fig.add_subplot(111)\n",
-    "linewidth = 0\n",
+    "linewidth = 2\n",
     "fsize = 16\n",
-    "ax.errorbar(1.0/np.array(boxsizes), meanKon, yerr=stdDevKon, marker='o', markersize=7, elinewidth=2, \n",
-    "            linewidth=linewidth , capsize=5, label='Benchmark')\n",
-    "ax.errorbar(1.0/np.array(boxsizes), meanKonMSMRD, yerr=stdDevKonMSMRD, marker='o', markersize=7, \n",
-    "            elinewidth=2, linewidth=linewidth, capsize=5, label='MSM/RD')\n",
-    "#ax.set_yscale('log')\n",
-    "ax.set_xlabel(r'Concentration', fontsize = fsize+2)\n",
+    "concentrations = 1.0/pow(np.array(boxsizes),3)\n",
+    "ax.errorbar(concentrations, meanKon, yerr=stdDevKon, marker='o', markersize=7, elinewidth=2, \n",
+    "            linewidth=linewidth , capsize=5, color='C1', label='Benchmark')\n",
+    "ax.errorbar(concentrations, meanKonMSMRD, yerr=stdDevKonMSMRD, marker='o', markersize=7, \n",
+    "            elinewidth=2, linewidth=linewidth, capsize=5, color='C0', label='MSM/RD')\n",
+    "ax.set_yscale('log')\n",
+    "ax.set_xlabel(r'Concentration (1/Volume)', fontsize = fsize+2)\n",
     "ax.set_ylabel(r'$k_\\mathrm{on}$', fontsize = fsize+8)\n",
-    "ax.set_ylim([0,0.12])\n",
+    "#ax.set_ylim([0,0.12])\n",
     "ax.legend(fontsize=fsize, title_fontsize = fsize, fancybox=True)"
    ]
   },
@@ -617,7 +619,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.array(meanKonMSMRD) - np.array(meanKon)"
+    "concentrations"
    ]
   },
   {
@@ -626,8 +628,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "1.0/np.array(boxsizes)"
+    "boxsizes"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pow(8,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
